--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,5 +18,5 @@ company = "Flet"
 copyright = "Copyright (C) 2024 by Flet"
 
 [tool.flet.app]
-path = "."
+path = "/"
 icon = "assets/icons/favicon.png"  # حدد المسار الصحيح للأيقونة
