--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,13 +42,21 @@ jobs:
     - name: Patch for Linux Build
       run: |
         sudo apt-get update -y
-        sudo apt-get install -y ninja-build libgtk-3-dev
-        flutter doctor
+        sudo apt-get install -y ninja-build libgtk-3-dev liblzma-dev libglu1-mesa libgl1-mesa-dev libpulse-dev
+        dpkg -l | grep libgtk
+        flutter doctor -v
+
+    - name: Install Flet CLI
+      run: |
+        python3 -m pip install --upgrade flet
 
     - name: Flet Build Linux
       run: |
-        flutter config --no-analytics 
+        flutter config --no-analytics
         flet build linux --verbose --build-number=$BUILD_NUMBER --build-version=$BUILD_VERSION
+
+    - name: List build directory
+      run: ls -R build
 
     - name: Upload Linux Artifact
       uses: actions/upload-artifact@v4.3.4
